CaptivePortal - connection info on root page - DONE

--- a/utils/WebServerTester/build.gradle
+++ b/utils/WebServerTester/build.gradle
@@ -27,6 +27,7 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile('org.springframework.boot:spring-boot-starter-mustache')
+	compile group: 'com.google.guava', name: 'guava', version: '24.1-jre'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
 }
