--- a/NodeMcuV3/config/config.dist.sh.template
+++ b/NodeMcuV3/config/config.dist.sh.template
@@ -5,7 +5,7 @@
 ARDUINO_CMD=
 
 # directory where all downloaded files will be cached
-ARDUINO_IDE_PACKAGES_SNAPSHOT_DIR=
+ARTIFACTS_DIR=
 
 # On linux often: /dev/ttyUSB0
 PORT=
