support for arduino libraries in clion command

--- a/NodeMcuV3/CMakeLists.txt
+++ b/NodeMcuV3/CMakeLists.txt
@@ -36,6 +36,8 @@ SET(SOURCE_FILES
   src/sketches/BlinkBuiltinLed/BlinkBuiltinLed.ino
   src/sketches/BlinkLedOnRequest/BlinkLedOnRequest.ino
   src/sketches/CaptivePortal/CaptivePortal.ino
+  src/libraries/CaptivePortal/src/CaptivePortal.h
+  src/libraries/CaptivePortal/src/CaptivePortal.cpp
 )
 
 add_executable(NodeMcuV3 ${SOURCE_FILES})
